# HomeAPI

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Rocket.toml  example.config.yml
.github/workflows/: build.yml
src/: main.rs  state.rs
src/config/: device.rs  dns.rs  mod.rs
src/jobs/: ddns.rs  mod.rs  selfupdate.rs
src/routes/: mod.rs  ping.rs  wake.rs
src/util/: net.rs
