[package]
name = "projectos-homeapi"
version = "0.2.0"
edition = "2021"             # Rust 2021 edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
wake-on-lan = "0.2.0"
yaml-rust = "0.4.5"
cloudflare = "0.10.1"
json = "0.12.4"
async-trait = "0.1.60"
tokio = "1.23.0"
futures = "0.3.25"
clokwerk = "0.4.0"
self_update = "0.37.0"

[dependencies.reqwest]
version = "0.11.13"
features = ["json"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]
